examples/test/testpolicy19826.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19826
  namespace: namespace70
spec:
  podSelector:
    matchLabels:
      key10: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value38
          key32: value24
          key0: value3
      podSelector:
        matchLabels:
          key13: value5
